upd content and add devices

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#111111" />
-  <!-- <link rel="stylesheet" href="css/adv.css" /> -->
   <link rel="stylesheet" href="css/style.css" />
-  <title>Главная</title>
+  <title>Разрешение экрана</title>
 </head>
 
   <body>
@@ -15,7 +14,6 @@
       <div class="header"></div>
 
       <main class="main">
-        <!-- <div class="container"> -->
           <div class="dimention">
             <div class="dimention__block">
               <p>
@@ -25,18 +23,16 @@
                 <span class="dimention__width"> 100</span> x <span class="dimention__height"> 200</span>
               </p>
             </div>
+            <div class="dimention__device">
+              <p>Redmi Note 10 Pro - 393x783 / 839x303</p>
+              <p>iPad 2017 9'7 - 768x960 / 1024x704</p>
+            </div>
           </div>
-        <!-- </div> -->
       </main>
 
-      <footer class="footer">
-        <div class="container"></div>
-      </footer>
-
+      <footer class="footer"></footer>
     </div>
 
-    <!-- подключение скриптов -->
-    <!-- <script defer src="js/libs.js"></script> -->
     <script defer src="js/main.min.js"></script>
   </body>
 </html>
