add Samsung and iPhone

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <main class="main">
           <div class="dimention">
             <div class="dimention__block">
+              <p>Разрешение экрана:</p>
               <p>
-                Разрешение экрана:
-              </p>
-              <p>
-                <span class="dimention__width"> 100</span> x <span class="dimention__height"> 200</span>
+                <span class="dimention__width">100</span> x <span class="dimention__height">200</span>
               </p>
             </div>
             <div class="dimention__device">
-              <p>Redmi Note 10 Pro - 393x783 / 839x303</p>
               <p>iPad 2017 9'7 - 768x960 / 1024x704</p>
+              <p>iPhone 10 XR - 414x721 / 800x370</p>
+              <p>Redmi Note 10 Pro - 393x783 / 839x303</p>
+              <p>Samsung S21 - 360x670 / 726x280</p>
             </div>
           </div>
       </main>
