--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#111111" />
-  <link rel="stylesheet" href="css/style.css" />
-  <title>Разрешение экрана</title>
-</head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#111111" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Разрешение экрана</title>
+  </head>
 
   <body>
     <div class="wrapper">
       <div class="header"></div>
 
       <main class="main">
-          <div class="dimention">
-            <div class="dimention__block">
-              <p>Разрешение экрана:</p>
-              <p>
-                <span class="dimention__width">100</span> x <span class="dimention__height">200</span>
-              </p>
-            </div>
-            <div class="dimention__device">
-              <p>iPad 2017 9'7 - 768x960 / 1024x704</p>
-              <p>iPhone 10 XR - 414x721 / 800x370</p>
-              <p>Redmi Note 10 Pro - 393x783 / 839x303</p>
-              <p>Samsung S21 - 360x670 / 726x280</p>
-            </div>
+        <div class="dimention">
+          <div class="dimention__block">
+            <p>Разрешение экрана:</p>
+            <p><span class="dimention__width">100</span> x <span class="dimention__height">200</span></p>
           </div>
+          <div class="dimention__device">
+            <p>iPad 2017 9'7 - 768x960 / 1024x704</p>
+            <p>iPhone 10 XR - 414x721 / 800x370</p>
+            <p>Redmi Note 10 Pro - 393x783 / 839x303</p>
+            <p>Samsung S21 - 360x670 / 726x280</p>
+            <p>Huawei Nova - 360x516 / 598x280</p>
+          </div>
+        </div>
       </main>
 
       <footer class="footer"></footer>
