--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
               <dt>Samsung S21</dt>
               <dd>360x670 / 726x280</dd>
             </div><!-- /.dimention__item -->
+            <div class="dimention__item">
+              <dt>Xiaomi 13T</dt>
+              <dd>406x771 / 827x321</dd>
+            </div><!-- /.dimention__item -->
           </dl>
 
           <dl class="dimention__tablets">
