--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
               <dd>414x721 / 800x370</dd>
             </div><!-- /.dimention__item -->
             <div class="dimention__item">
+              <dt>iPhone 12 Pro Max</dt>
+              <dd>428x730 / 0x0</dd>
+            </div><!-- /.dimention__item -->
+            <div class="dimention__item">
               <dt>Huawei Nova</dt>
               <dd>360x516 / 598x280</dd>
             </div><!-- /.dimention__item -->
