--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
               <dd>360x670 / 726x280</dd>
             </div><!-- /.dimention__item -->
             <div class="dimention__item">
+              <dt>Samsung S24</dt>
+              <dd>384x700 / 757x303</dd>
+            </div><!-- /.dimention__item -->
+            <div class="dimention__item">
               <dt>Xiaomi 13T</dt>
               <dd>406x771 / 827x321</dd>
             </div><!-- /.dimention__item -->
